--- a/src/release-note.json
+++ b/src/release-note.json
@@ -4,10 +4,46 @@
   },
   "releases": [
     {
-      "date": "2025-10-31",
-      "version": "v4.4.0",
+      "date": "2025-11-02",
+      "version": "v4.5.0",
       "message": "",
       "commits": [
+        {
+          "title": "fix: ミュート状態の記憶処理を追加",
+          "hash": "85638a8dfa8d7dcb336c7a2f4805935f63e13d53"
+        },
+        {
+          "title": "feat: ダメージスナップショット別窓の再利用を実装",
+          "hash": "7e6e5e1132b2041df66c2fcc00ea7f445a5d1cc7"
+        },
+        {
+          "title": "feat: 遠征追加用 Issue テンプレートの整備",
+          "hash": "308f188f509ce3a1d80a0a1e3dd58cfe936d0f13"
+        },
+        {
+          "title": "fix: MissionCategory に others を追加",
+          "hash": "07fb5485dae33c08b4258c913fb1f2c7f597e305"
+        },
+        {
+          "title": "chore: FUNDING 設定の追加",
+          "hash": "e541f2fcc11f642636f8924580d335e24024a6ab"
+        },
+        {
+          "title": "fix: Codecov カバレッジファイルのパスを修正",
+          "hash": "2cb179f8b89d3d66dde1b9eb0bee27c2c34b3c2f"
+        },
+        {
+          "title": "docs: OCR 時刻検出の設計判断を記録",
+          "hash": "70a0e4efad9deae5a263de6baf77b8bf164f6bca"
+        },
+        {
+          "title": "Update AGENTS md",
+          "hash": "d38a5bfa5593fd5307ccec73e74dd5cc01fc5335"
+        },
+        {
+          "title": "v4.4.0",
+          "hash": "26942544e72bf204b21e4ee90548c2e7e5e7c986"
+        },
         {
           "title": "fix: オプション設定の表示順序を調整",
           "hash": "09adf26a33d6eb8fe2cbbfacf6dbf363bf7a00b1"
